--- a/.github/workflows/mpv_clang.yml
+++ b/.github/workflows/mpv_clang.yml
@@ -29,7 +29,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        bit: [i686, x86_64, x86_64_v3]
+        bit: [x86_64, x86_64_v3]
     env:
       BIT: ${{ matrix.bit }}
     container:
@@ -132,20 +132,20 @@ jobs:
           7z a -m0=lzma2 -mx=9 -ms=on -r logs2.7z *.log *.cmake *.ninja *.txt configure *.m4 *.sh
 
       - name: Uploading logs
-        uses: actions/upload-artifact@master
+        uses: actions/upload-artifact@main
         if: always()
         with:
           name: mpv-${{ matrix.bit }}-logs
           path: logs*.7z
 
       - name: Uploading ${{ matrix.bit }} build
-        uses: actions/upload-artifact@master
+        uses: actions/upload-artifact@main
         with:
           name: mpv-${{ matrix.bit }}
           path: release_${{ matrix.bit }}/mpv-${{ env.arch }}*
 
       - name: Uploading ${{ matrix.bit }} debug
-        uses: actions/upload-artifact@master
+        uses: actions/upload-artifact@main
         with:
           name: mpv-${{ matrix.bit }}-debug
           path: release_${{ matrix.bit }}/mpv-debug-${{ env.arch }}*
@@ -195,7 +195,6 @@ jobs:
     runs-on: ubuntu-latest
     needs: build_mpv
     env:
-      release_i686_key: ${{ secrets.CACHE_VERSION }}-release_i686-${{ github.run_id }}
       release_x86_64_key: ${{ secrets.CACHE_VERSION }}-release_x86_64-${{ github.run_id }}
       release_x86_64_v3_key: ${{ secrets.CACHE_VERSION }}-release_x86_64_v3-${{ github.run_id }}
     container:
@@ -212,13 +211,7 @@ jobs:
 
       - uses: actions/checkout@main
         with:
-          ref: master
-
-      - name: Loading release_i686 cache
-        uses: actions/cache/restore@main
-        with:
-          path: release_i686
-          key: ${{ env.release_i686_key }}
+          ref: main
 
       - name: Loading release_x86_64 cache
         uses: actions/cache/restore@main
@@ -235,7 +228,7 @@ jobs:
       - name: Moving archives
         run: |
           mkdir -p release
-          mv release_i686/* release_x86_64/* release_x86_64_v3/* release
+          mv release_x86_64/* release_x86_64_v3/* release
           du -ah release/*
           echo "short_date=$(date "+%Y%m%d")" >> $GITHUB_ENV
 
